2007-08-17  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs,
	  MonoDevelop.Ide.CodeTemplates/CodeTemplateService.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/ExternalToolPanel.cs,
	  MonoDevelop.Ide.Commands/ToolsCommands.cs,
	  MonoDevelop.Ide.ExternalTools/ExternalTool.cs,
	  MonoDevelop.Ide.ExternalTools/ExternalToolService.cs,
	  MonoDevelop.Ide.ExternalTools/ToolLoader.cs: Fixed bug 75807: Save
	  file for external tools. Re-wrote external tools subsystem, fixed
	  some possible issues in the code templates.

2007-08-16  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/objects.xml: Assigned a better category to custom widgets.

2007-08-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs,
	  MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs,
	  MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Redirection to the
	  ViewCommandHandlers object is now done in the notebook instead of in
	  SdiWorkspaceWindow. In this way those commands will be enabled even if
	  the focus is not in the editor (it can be in the notebook label). Fixes
	  bug #82217.

2007-08-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/StatusProgressMonitor.cs: Properly update the status
	  bar when multiple status progress monitors are running at the same time.
	  Fixes bug #82251.

2007-08-16  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Commands/FileCommands.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/FolderNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/CombineNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/SystemFileNodeBuilder.cs,
	  MonoDevelop.Ide.addin.xml: Implemented Wish 82213: New command for
	  context menu: Open containing folder.
	
	  Added open in terminal option too (for folders). 

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 
