@@ -41,6 +41,19 @@ namespace MonoDevelop.Ide.Tasks
 			IdeApp.ProjectOperations.FileRemovedFromProject += new ProjectFileEventHandler (ProjectFileRemoved);
 
 			Runtime.Properties.PropertyChanged += (EventHandler<PropertyEventArgs>) DispatchService.GuiDispatch (new EventHandler<PropertyEventArgs> (OnPropertyUpdated));
+			MonoDevelop.Projects.Text.TextFileService.LineCountChanged += delegate (object sender, MonoDevelop.Projects.Text.LineCountEventArgs args) {
+				List<Task> tasks = new List<Task> ();
+				Console.WriteLine (args);
+				foreach (Task task in this.Tasks) {
+					Console.WriteLine ("   "  + task);
+					if (Path.GetFullPath (task.FileName) == Path.GetFullPath (args.TextFile.Name) && task.Line - 1 > args.LineNumber || (task.Line - 1 == args.LineNumber && task.Column - 1 >= args.Column)) {
+						task.Line += args.LineCount;
+						tasks.Add (task);
+						
+					}
+				}
+				OnTaskChanged (new TaskEventArgs (tasks));
+			};
 		}
 
 		void ProjectServiceSolutionOpened (object sender, CombineEventArgs e)
@@ -414,6 +427,13 @@ namespace MonoDevelop.Ide.Tasks
 			}
 		}
 		
+		protected virtual void OnTaskChanged (TaskEventArgs e)
+		{
+			if (TaskChanged != null) {
+				TaskChanged (this, e);
+			}
+		}
+		
 		protected virtual void OnTasksCleared (EventArgs e)
 		{
 			if (TasksCleared != null) {
@@ -423,6 +443,7 @@ namespace MonoDevelop.Ide.Tasks
 		
 		public event TaskEventHandler TaskAdded;
 		public event TaskEventHandler TaskRemoved;
+		public event TaskEventHandler TaskChanged;
 		public event EventHandler TasksCleared;
 		public event EventHandler CompilerOutputChanged;
 		public event EventHandler UserTasksChanged;
