@@ -1,3 +1,9 @@
+2007-08-20  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs, MonoDevelop.Ide.Tasks/Task.cs,
+	  MonoDevelop.Ide.Tasks/TaskService.cs: Fixed bug 82282:Error list pad
+	  should take into account line changes done in files.
+
 2007-08-17  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs,
